@@ -3,6 +3,8 @@ amaroK Changelog
 (c) 2002, 2003 by Mark Kretschmann and the amaroK team. GPL License.
 
 
+  * change: less staccato loading of widgets
+  * change: pause makes the analyser bars fall to zero rather than just vanish
   * add: xfade when starting tracks by doubleclick
   * fix: global shortcuts can now be changed
   * fix: tracks skipping randomly
